### Features ## Settings widget - Changed dragable to be controlled ## Translator widget - Stored 'select-from' and 'select-to' in session storage to re-select the user's choice ## Google Translator widget - Stored 'select-from' and 'select-to' in session storage to re-select the user's choice ## Calculator widget - Stored 'memory' in session storage to repopulate memory with the user's saved numbers - Fixed 'MS' saving regardless of input [EX: '-' -> doesn't save as 'null' anymore] - Fixed expand input popout where the scrollbar was out of place ## Weather widget - Stored 'input' in session storage to re-enter what the user typed in ## Others - Removed function call, funcRandColor, in componentDidMount for every widget and instead called randColor everytime a widget is shown in handleShowHide - Saved widget's positions in local storage to retain a user's layout

--- a/src/index.scss
+++ b/src/index.scss
@@ -125,7 +125,7 @@ body{
         height: 4.8em;
     }
     &.p{
-        height: 8.4em;
+        height: 8.5em;
     }
 }
 
@@ -152,6 +152,7 @@ body{
         word-wrap: break-word;
         &.short{
             height: 6.5em;
+            width: unset;
         }
     }
 }
